--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.sublime-project
 /tests/tests/
 /tests/results/
+
+
+# Ignore Bootstrap files
+assets/bootstrap/css
+assets/bootstrap/js
+assets/bootstrap/icons
